@@ -1,5 +1,8 @@
 2007-06-11  Inge Wallin  <inge@lysator.liu.se>
 
+	More float to double changes, the placemark layer
+	* src/lib/placemarkpainter.{h,cpp}: float -> double
+
 	More float to double changes, this time the vector layer
 	* src/lib/vectormap.{h,cpp}:     float -> double
 	* src/lib/clippainter.{h,cpp}:   float -> double
